--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Heloisa
+<html lang="pt-BR">
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <title>HELOISAFLIX</title>
+</head>
+
+<body>
+    <header>HELOISAFLIX</header>
+
+    <section>
+        <div class="chamada-texto">
+            <h1>Lana Del Rey - Video Games</h1>
+            <p>#LanaDelRey</p>
+        </div>
+
+        <div>
+            <iframe width="560" height="315" src="https://youtu.be/o_1aF54DO60?si=RfYMUNOK27_J7RVV"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+
+</body>
+
+</html>
