--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ ESCOLHA 5 VÍDEOS PARA COLOCAR NO SITE PARA RELACIONAR COM O TEMA ESCOLHIDO
 
             </a>
          
-            <a href=""https://youtu.be/DCYmJDO2_IE?si=5OwVUfFrER5qqPMR>
+            <a href="https://youtu.be/cE6wxDqdOV0?si=Wdb3WMy6IgIbYc-3">
          
              </a>
 
