--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> CABEÇALHO DA SUA PÁGINA </header> <!-- cabeçalho-->
+    <header> CABEÇALHO DA SUA PÁGINA </header> <!--LANA DEL REY -->
 
 
     <section>
@@ -25,7 +25,7 @@ VÁ NO VÍDEO ESCOLHIDO - CLIQUE EM COMPARTILHAR E EMBUTIR - COPIE E COLE AQUI O
 
 
         <h2>LANA DEL REY Video Games  </h2>
-        <div class=" categoria-vídeos"> 
+        <div class=" VIDEO CLIP "> 
 
 
 ESCOLHA 5 VÍDEOS PARA COLOCAR NO SITE PARA RELACIONAR COM O TEMA ESCOLHIDO
