--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ ESCOLHA 5 VÍDEOS PARA COLOCAR NO SITE PARA RELACIONAR COM O TEMA ESCOLHIDO
 </html>
 
 body{
-    background-color: rgb(70, 4, 50) Coloque a cor de preferência no fundo da pág web;
-    color: rgb(223, 160, 223) cor da letra do corpo da página
+    background-color: rgb(red)Coloque a cor de preferência no fundo da pág web;
+    color: rgb(black) cor da letra do corpo da página
 }
 
 
