--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
 
         <div> ESSA DIVISÓRIA É PARA ARMAZENAR O LINK ESCOLHIDO DO YOUTUBE.
-            https://youtu.be/o_1aF54DO60?si=GM2PyHrOB9GOV2Yo
-
+       
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/o_1aF54DO60?si=GM2PyHrOB9GOV2Yo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            
 
 
 
