--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> Lana </header> <!-- cabeçalho-->
+    <header> Lana del rey  </header> <!-- cabeçalho-->
 
 
     <section>
